--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
         <h4>Bulletin Archive</h4>
         <ul>
-          <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, A.D. 2014</a></li>
+          <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, AD 2014</a></li>
+          <li><a href="bulletins/spc_bulletin_20141221.pdf">December 21, AD 2014</a></li>
         </ul>
 
         <h4>Mass Schedule</h4>
