Clean up HTML, CSS

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
+
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="Content-Language" content="en-us" />
 
     <title>Ss. Philomena and Cecilia Catholic Church</title>
 
     <meta name="ROBOTS" content="ALL" />
-    <meta http-equiv="imagetoolbar" content="no" />
-    <meta name="MSSmartTagsPreventParsing" content="true" />
-    <meta name="Copyright" content="(c) 2009 Copyright content:  Copyright design: Clayton Hynfield" />
+    <meta name="Copyright" content="(c) 2014 Copyright content:  Copyright design: Clayton Hynfield" />
     <!-- (c) Copyright 2009 by Clayton Hynfield All Rights Reserved. -->
 
     <meta name="Keywords" content="__KEYWORDS__" />
@@ -21,65 +18,57 @@
     <link href="css/graduale/print.css" rel="stylesheet" type="text/css" media="print" />
     <link href="css/hand_missal.css" rel="stylesheet" type="text/css" media="screen, projection" />
 
-    <!-- import the DOM logic from external javascript files -->
-    <!-- script type="text/javascript" src="/js/basic.js"></script -->
-
-    <!-- KLUDGE:: Win IE 5 -->
     <!-- corrects the unsightly Flash of Unstyled Content. See http://www.bluerobot.com/web/css/fouc.asp for more info -->
     <script type="text/javascript"></script>
-    <!-- END KLUDGE:: -->
-
   </head>
 
   <body>
     <div class="container">
       <div id="header" class="column span-10">
         <img src="images/elevation.jpg" alt="Elevation of the Host" />
-        <!-- div class="nav">
-          <h4><a href="index.html"     >Home</a></h4>
-          <h4><a href="about.html"     >About</a></h4>
-          <h4><a href="directions.html">Directions</a></h4>
-          <h4><a href="bulletin.html"  >Bulletin</a></h4>
-          <h4><a href="schedules.html" >Schedules</a></h4>
-        </div -->
         <h1>
           Ss. Philomena and Cecilia Catholic Church
         </h1>
       </div>
       <hr/>
-	    <div id="main" class="column span-6 first">
-	      <p class="start">
-        Ss. Philomena and Cecilia Catholic Church is served by the Priestly Fraternity of St. Peter with the approval and blessing of His Excellency Most Rev. Joseph W. Tobin, C.Ss.R. Archbishop of Indianapolis. All Masses and Sacraments are performed in the Latin <em>usus antiquior</em> of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em> of His Holiness Pope Benedict XVI.
+      <div id="main" class="column span-6 first">
+        <p class="start">
+          Ss. Philomena and Cecilia Catholic Church is served by the Priestly Fraternity of St. Peter with the approval and blessing of His Excellency Most Rev. Joseph W. Tobin, C.Ss.R. Archbishop of Indianapolis. All Masses and Sacraments are performed in the
+          Latin <em>usus antiquior</em> of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em>          of His Holiness Pope Benedict XVI.
         </p>
         <p>
-          Rev. Fr. Karl A. Pikus, fssp, Administrator<br/>
+          Rev. Fr. Karl A. Pikus, fssp, Administrator
+          <br/>
         </p>
         <p>
-          16194 St. Mary's Road<br/>
-          Brookville, IN 47012<br/>
-          (765) 647-0310<br/>
+          16194 St. Mary's Road<br />
+          Brookville, IN 47012<br />
+          (765) 647-0310<br />
           (<a href="directions.html">directions</a>)
         </p>
       </div>
       <div class="column span-4 last">
 
-
         <h4>Bulletin Archive</h4>
         <ul>
-          <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, AD 2014</a></li>
-          <li><a href="bulletins/spc_bulletin_20141221.pdf">December 21, AD 2014</a></li>
+          <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, AD 2014</a>
+          </li>
+          <li><a href="bulletins/spc_bulletin_20141221.pdf">December 21, AD 2014</a>
+          </li>
         </ul>
 
         <h4>Mass Schedule</h4>
         <dl>
           <dt>Sunday</dt>
-            <dd><span class="sc">7:30am &amp; 10:30am</span> (High Mass)</dd>
+          <dd><span class="sc">7:30am &amp; 10:30am</span> (High Mass)</dd>
           <dt>Monday&ndash;Friday</dt>
-            <dd><span class="sc">12:00pm</span></dd>
+          <dd><span class="sc">12:00pm</span>
+          </dd>
           <dt>Saturday</dt>
-            <dd><span class="sc">7:30am</span> (First Saturday @ <span class="sc">8:30am)</span></dd>
+          <dd><span class="sc">7:30am</span> (First Saturday @ <span class="sc">8:30am)</span>
+          </dd>
           <dt>Holy Days</dt>
-            <dd><span class="sc">7:00am &amp; 7:00pm</span> (High Mass)</dd>
+          <dd><span class="sc">7:00am &amp; 7:00pm</span> (High Mass)</dd>
         </dl>
 
         <h4>Confessions</h4>
@@ -92,11 +81,13 @@
       <hr/>
       <div class="column prepend-6 span-4 first">
         <p class="small">
-          All content &copy;2009 Ss. Philomena and Cecilia Catholic Church<br/>
+          All content &copy;2009 Ss. Philomena and Cecilia Catholic Church
+          <br/>
           <a href="mailto:webmaster@spcfssp.org">Contact the webmaster</a>
         </p>
       </div>
     </div>
 
   </body>
+
 </html>
