Swap Bootstrap for Blueprint
Styling looks awful for now, as expected.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Language" content="en-us" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Ss. Philomena and Cecilia Catholic Church</title>
 
@@ -14,8 +16,16 @@
     <meta name="Keywords" content="__KEYWORDS__" />
     <meta name="Description" content="__DESCRIPTION__" />
 
-    <link href="css/graduale/screen.css" rel="stylesheet" type="text/css" media="screen, projection" />
-    <link href="css/graduale/print.css" rel="stylesheet" type="text/css" media="print" />
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
     <link href="css/hand_missal.css" rel="stylesheet" type="text/css" media="screen, projection" />
 
     <!-- corrects the unsightly Flash of Unstyled Content. See http://www.bluerobot.com/web/css/fouc.asp for more info -->
@@ -24,68 +34,68 @@
 
   <body>
     <div class="container">
-      <div id="header" class="column span-10">
+      <div id="header" class="jumbotron">
         <img src="images/elevation.jpg" alt="Elevation of the Host" />
         <h1>
           Ss. Philomena and Cecilia Catholic Church
         </h1>
       </div>
       <hr/>
-      <div id="main" class="column span-6 first">
-        <p class="start">
-          Ss. Philomena and Cecilia Catholic Church is served by the Priestly Fraternity of St. Peter with the approval and blessing of His Excellency Most Rev. Joseph W. Tobin, C.Ss.R. Archbishop of Indianapolis. All Masses and Sacraments are performed in the
-          Latin <em>usus antiquior</em> of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em>          of His Holiness Pope Benedict XVI.
-        </p>
-        <p>
-          Rev. Fr. Karl A. Pikus, fssp, Administrator
-          <br/>
-        </p>
-        <p>
-          16194 St. Mary's Road<br />
-          Brookville, IN 47012<br />
-          (765) 647-0310<br />
-          (<a href="directions.html">directions</a>)
-        </p>
+      <div class="row">
+        <div id="main" class="col-lg-6">
+          <p class="start">
+            Ss. Philomena and Cecilia Catholic Church is served by the Priestly Fraternity of St. Peter with the approval and blessing of His Excellency Most Rev. Joseph W. Tobin, C.Ss.R. Archbishop of Indianapolis. All Masses and Sacraments are performed in the
+            Latin <em>usus antiquior</em> of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em>          of His Holiness Pope Benedict XVI.
+          </p>
+          <p>
+            Rev. Fr. Karl A. Pikus, fssp, Administrator
+            <br/>
+          </p>
+          <p>
+            16194 St. Mary's Road<br />
+            Brookville, IN 47012<br />
+            (765) 647-0310<br />
+            (<a href="directions.html">directions</a>)
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <h4>Bulletin Archive</h4>
+          <ul>
+            <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, AD 2014</a>
+            </li>
+            <li><a href="bulletins/spc_bulletin_20141221.pdf">December 21, AD 2014</a>
+            </li>
+          </ul>
+          <h4>Mass Schedule</h4>
+          <dl>
+            <dt>Sunday</dt>
+            <dd><span class="sc">7:30am &amp; 10:30am</span> (High Mass)</dd>
+            <dt>Monday&ndash;Friday</dt>
+            <dd><span class="sc">12:00pm</span>
+            </dd>
+            <dt>Saturday</dt>
+            <dd><span class="sc">7:30am</span> (First Saturday @ <span class="sc">8:30am)</span>
+            </dd>
+            <dt>Holy Days</dt>
+            <dd><span class="sc">7:00am &amp; 7:00pm</span> (High Mass)</dd>
+          </dl>
+          <h4>Confessions</h4>
+          <ul>
+            <li>Before all Masses</li>
+            <li>During Exposition on First Friday</li>
+          </ul>
+        </div>
+        <hr/>
+        <footer class="footer">
+          <p>
+            All content &copy;2009 Ss. Philomena and Cecilia Catholic Church
+          </p>
+          <p>
+            <a href="mailto:webmaster@spcfssp.org">Contact the webmaster</a>
+          </p>
+        </footer>
       </div>
-      <div class="column span-4 last">
 
-        <h4>Bulletin Archive</h4>
-        <ul>
-          <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, AD 2014</a>
-          </li>
-          <li><a href="bulletins/spc_bulletin_20141221.pdf">December 21, AD 2014</a>
-          </li>
-        </ul>
-
-        <h4>Mass Schedule</h4>
-        <dl>
-          <dt>Sunday</dt>
-          <dd><span class="sc">7:30am &amp; 10:30am</span> (High Mass)</dd>
-          <dt>Monday&ndash;Friday</dt>
-          <dd><span class="sc">12:00pm</span>
-          </dd>
-          <dt>Saturday</dt>
-          <dd><span class="sc">7:30am</span> (First Saturday @ <span class="sc">8:30am)</span>
-          </dd>
-          <dt>Holy Days</dt>
-          <dd><span class="sc">7:00am &amp; 7:00pm</span> (High Mass)</dd>
-        </dl>
-
-        <h4>Confessions</h4>
-        <ul>
-          <li>Before all Masses</li>
-          <li>During Exposition on First Friday</li>
-        </ul>
-
-      </div>
-      <hr/>
-      <div class="column prepend-6 span-4 first">
-        <p class="small">
-          All content &copy;2009 Ss. Philomena and Cecilia Catholic Church
-          <br/>
-          <a href="mailto:webmaster@spcfssp.org">Contact the webmaster</a>
-        </p>
-      </div>
     </div>
 
   </body>
