Update index, Hand Missal CSS for Bootstrap
Index:
* Style intro paragraph as lead
* Rebalance columns to evoke hand missal layout

CSS:
* Start with [jumbotron-narrow][] defaults

[jumbotron-narrow]: http://getbootstrap.com/examples/jumbotron-narrow/

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
   <body>
     <div class="container">
       <div id="header" class="jumbotron">
-        <img src="images/elevation.jpg" alt="Elevation of the Host" />
+        <img src="images/elevation.jpg" alt="Elevation of the Host" width=100%/>
         <h1>
           Ss. Philomena and Cecilia Catholic Church
         </h1>
       </div>
       <hr/>
-      <div class="row">
-        <div id="main" class="col-lg-6">
-          <p class="start">
+      <div class="row details">
+        <div id="main" class="col-lg-7">
+          <p class="lead text-justify">
             Ss. Philomena and Cecilia Catholic Church is served by the Priestly Fraternity of St. Peter with the approval and blessing of His Excellency Most Rev. Joseph W. Tobin, C.Ss.R. Archbishop of Indianapolis. All Masses and Sacraments are performed in the
             Latin <em>usus antiquior</em> of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em>          of His Holiness Pope Benedict XVI.
           </p>
@@ -58,7 +58,7 @@
             (<a href="directions.html">directions</a>)
           </p>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5">
           <h4>Bulletin Archive</h4>
           <ul>
             <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, AD 2014</a>
