Update content at Reverend Father's request
* Remove administrator's name
* Remove all but Sunday Mass times
* Remove bulletins
* Add links to FSSP, Archdiocese web sites

--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
         <div id="main" class="col-lg-7">
           <p class="lead text-justify">
             Ss. Philomena and Cecilia Catholic Church is served by the Priestly Fraternity of St. Peter with the approval and blessing of His Excellency Most Rev. Joseph W. Tobin, C.Ss.R. Archbishop of Indianapolis. All Masses and Sacraments are performed in the
-            Latin <em>usus antiquior</em> of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em>          of His Holiness Pope Benedict XVI.
-          </p>
-          <p>
-            Rev. Fr. Karl A. Pikus, fssp, Administrator
-            <br/>
+            Latin extraordinary form of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em>          of His Holiness Pope Benedict XVI.
           </p>
           <p>
             16194 St. Mary's Road<br />
@@ -59,42 +55,31 @@
           </p>
         </div>
         <div class="col-lg-5">
-          <h4>Bulletin Archive</h4>
-          <ul>
-            <li><a href="bulletins/spc_bulletin_20141130.pdf">November 30, AD 2014</a>
-            </li>
-            <li><a href="bulletins/spc_bulletin_20141221.pdf">December 21, AD 2014</a>
-            </li>
-          </ul>
           <h4>Mass Schedule</h4>
           <dl>
             <dt>Sunday</dt>
-            <dd><span class="sc">7:30am &amp; 10:30am</span> (High Mass)</dd>
-            <dt>Monday&ndash;Friday</dt>
-            <dd><span class="sc">12:00pm</span>
-            </dd>
-            <dt>Saturday</dt>
-            <dd><span class="sc">7:30am</span> (First Saturday @ <span class="sc">8:30am)</span>
-            </dd>
-            <dt>Holy Days</dt>
-            <dd><span class="sc">7:00am &amp; 7:00pm</span> (High Mass)</dd>
+            <dd><span class="sc">7:30am</dd>
+            <dd>10:30am</span> (High Mass, Sep&ndash;May)</dd>
+            <dt>Monday&ndash;Saturday, Holy Days</dt>
+            <dd>Varies&mdash;please see a recent bulletin</dd>
           </dl>
           <h4>Confessions</h4>
           <ul>
             <li>Before all Masses</li>
-            <li>During Exposition on First Friday</li>
+          </ul>
+          <h4>Links</h4>
+          <ul>
+            <li><a href="http://fssp.org/en/index.htm">The Priestly Fraternity of St. Peter</a></li>
+            <li><a href="http://www.archindy.org/">The Archdiocese of Indianapolis</a></li>
           </ul>
         </div>
         <hr/>
-        <footer class="footer">
-          <p>
-            All content &copy;2009 Ss. Philomena and Cecilia Catholic Church
-          </p>
-          <p>
-            <a href="mailto:webmaster@spcfssp.org">Contact the webmaster</a>
-          </p>
-        </footer>
       </div>
+      <footer class="footer">
+        <p>
+          All content &copy;2014 Ss. Philomena and Cecilia Catholic Church
+        </p>
+      </footer>
 
     </div>
 
