Add GoudyStM webfonts, styling

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <h4>Mass Schedule</h4>
           <dl>
             <dt>Sunday</dt>
-            <dd><span class="sc">7:30am</dd>
-            <dd>10:30am</span> (High Mass, Sep&ndash;May)</dd>
+            <dd><span class="sc">7:30am</span></dd>
+            <dd><span class="sc">10:30am</span> (High Mass, Sep&ndash;May)</dd>
             <dt>Monday&ndash;Saturday, Holy Days</dt>
             <dd>Varies&mdash;please see a recent bulletin</dd>
           </dl>
