Switch to horizontal columns on tablets

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <hr/>
       <div class="row details">
-        <div id="main" class="col-lg-7">
+        <div id="main" class="col-sm-7">
           <p class="lead text-justify">
             Ss. Philomena and Cecilia Catholic Church is served by the Priestly Fraternity of St. Peter with the approval and blessing of His Excellency Most Rev. Joseph W. Tobin, C.Ss.R. Archbishop of Indianapolis. All Masses and Sacraments are performed in the
             Latin extraordinary form of the Roman Rite, in accordance with the Missal of Blessed John XXIII published in 1962, as expressed in the Motu Proprio <em><a href="http://www.sanctamissa.org/EN/resources/summorum-pontificum.html">Summorum Pontificum</a></em>          of His Holiness Pope Benedict XVI.
@@ -54,7 +54,7 @@
             (<a href="directions.html">directions</a>)
           </p>
         </div>
-        <div class="col-lg-5">
+        <div class="col-sm-5">
           <h4>Mass Schedule</h4>
           <dl>
             <dt>Sunday</dt>
